extras/tree-sitter-wcl/grammar.js
    document: ($) => repeat($._doc_item),

    _doc_item: ($) =>
      choice(
        $.import_declaration,
        $.export_declaration,
        $.namespace_declaration,
        $.use_declaration,
        $._body_item,
      ),

    _body_item: ($) =>
      choice(
        $.attribute,
        $.block,
        $.table,
        $.let_binding,
        $.macro_definition,
        $.macro_call,
        $.for_loop,
        $.conditional,
        $.validation,
        $.schema,
        $.struct_definition,
        $.decorator_schema,
        $.declare_statement,
        $.symbol_set_declaration,
      ),

    // Imports
    import_declaration: ($) =>
      seq(
        "import",
        optional("?"),
        choice($.string_literal, $.library_import),
        optional($.lazy_modifier),
      ),

    library_import: ($) => seq("<", /[^>]+/, ">"),

    // Exports
    export_declaration: ($) =>
      choice(
        seq("export", "let", $.identifier, "=", $.expression),
        seq("export", $.identifier),
      ),

    // Namespaces
    attribute: ($) =>
      seq(repeat($.decorator), $.identifier, "=", $.expression),

    // Blocks
    //
    // Three surface forms:
    //   1. `kind id? args* { body }`  — standard braced block
    //   2. `kind id? "text"`          — braceless text-content shorthand
    //   3. `kind id`                  — braceless bookmark (id only)
    block: ($) =>
      seq(
        repeat($.decorator),
        optional("partial"),
        $.identifier,
        choice(
          // Form 1: braced (with optional id and args). Dynamic precedence
          // prefers this when a `{` is actually reachable.
          prec.dynamic(
            -1,
            seq(
              optional($.identifier_literal),
              repeat($.inline_arg),
              $.block_body,
            ),
          ),
          // Form 2: braceless text-content — `kind id? "string"`
          // (id may be a plain identifier or a hyphenated identifier_literal)
          prec.dynamic(
            1,
            seq(
              optional(choice($.identifier_literal, $.identifier)),
              $.string_literal,
            ),
          ),
          // Form 3: braceless bookmark — just `kind id`
          prec.dynamic(1, choice($.identifier_literal, $.identifier)),
        ),
      ),

    inline_arg: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.date_literal,
        $.duration_literal,
        $.string_literal,
        $.boolean_literal,
        $.null_literal,
        $.symbol_literal,
        $.identifier,
        $.list_literal,
      ),

    block_body: ($) => seq("{", repeat($._body_item), "}"),

    // Let bindings
    let_binding: ($) =>
      seq(optional("partial"), "let", $.identifier, "=", $.expression),

    // Control flow
    for_loop: ($) =>
      seq(
        "for",
        $.identifier,
        optional(seq(",", $.identifier)),
        "in",
        $.expression,
        "{",
        repeat($._body_item),
        "}",
      ),

    conditional: ($) =>
      seq(
        "if",
        $.expression,
        "{",
        repeat($._body_item),
        "}",
        optional($.else_branch),
      ),

    else_branch: ($) =>
      seq(
        "else",
        choice($.conditional, seq("{", repeat($._body_item), "}")),
      ),

    // Tables
    table: ($) =>
      seq(
        repeat($.decorator),
        optional("partial"),
        "table",
        optional(choice($.identifier_literal, $.identifier)),
        optional(seq(":", $.identifier)),
        choice(
          seq("{", repeat($.column_declaration), repeat($.table_row), "}"),
          seq("=", $.expression),
        ),
      ),

    column_declaration: ($) =>
      seq(repeat($.decorator), $.identifier, ":", $.type_expression),

    table_row: ($) =>
      seq("|", $.expression, repeat(seq("|", $.expression)), "|"),

    // Schemas
    schema: ($) =>
      seq(
        repeat($.decorator),
        "schema",
        $.string_literal,
        "{",
        repeat(choice($.schema_field, $.schema_variant)),
        "}",
      ),

    schema_field: ($) =>
      prec.right(
        seq(
          repeat($.decorator),
          $.identifier,
          ":",
          $.type_expression,
          repeat($.decorator),
        ),
      ),

    // Struct definitions
    decorator_schema: ($) =>
      seq(
        repeat($.decorator),
        "decorator_schema",
        $.string_literal,
        "{",
        $.decorator_schema_body,
        "}",
      ),

    decorator_schema_body: ($) =>
      seq(
        "target",
        "=",
        "[",
        commaSep1($.target_type),
        "]",
        repeat($.schema_field),
      ),

    target_type: ($) => choice("block", "attribute", "table", "schema", "let"),

    // Decorators
    decorator: ($) =>
      seq(
        "@",
        $.identifier,
        optional(seq("(", optional($.decorator_arguments), ")")),
      ),

    decorator_arguments: ($) => commaSep1($._decorator_arg),

    _decorator_arg: ($) => choice($.named_argument, $.expression),

    named_argument: ($) => seq($.identifier, "=", $.expression),

    // Macros
    macro_definition: ($) =>
      seq(
        repeat($.decorator),
        "macro",
        choice($.function_macro, $.attribute_macro),
      ),

    function_macro: ($) =>
      seq(
        $.identifier,
        "(",
        optional($.parameter_list),
        ")",
        "{",
        repeat($._body_item),
        "}",
      ),

    parameter_list: ($) => commaSep1($.parameter),

    parameter: ($) =>
      seq(
        $.identifier,
        optional(seq(":", $.type_expression)),
        optional(seq("=", $.expression)),
      ),

    macro_call: ($) =>
      seq($.identifier, "(", optional($.argument_list), ")"),

    argument_list: ($) => commaSep1(choice($.named_argument, $.expression)),

    // Transform directives (attribute macros)
    validation: ($) =>
      seq(
        repeat($.decorator),
        "validation",
        $.string_literal,
        "{",
        repeat($.let_binding),
        "check",
        "=",
        $.expression,
        "message",
        "=",
        $.expression,
        "}",
      ),

    // Declare statements (library function stubs)
    declare_statement: ($) =>
      seq(
        "declare",
        $.identifier,
        "(",
        optional($.parameter_list),
        ")",
        optional(seq("->", $.type_expression)),
      ),

    // Type expressions
    type_expression: ($) =>
      choice(
        $.builtin_type,
        $.list_type,
        $.map_type,
        $.set_type,
        $.ref_type,
        $.union_type,
      ),

    builtin_type: ($) =>
      choice("string", "bool", "null", "identifier", "any", "symbol",
             "i8", "u8", "i16", "u16", "i32", "u32", "i64", "u64",
             "i128", "u128", "f32", "f64", "date", "duration"),

    list_type: ($) => seq("list", "(", $.type_expression, ")"),
    union_type: ($) => seq("union", "(", commaSep1($.type_expression), ")"),

    // Expressions
    expression: ($) => $._ternary_expression,

    _ternary_expression: ($) =>
      choice($.ternary_expression, $._or_expression),

    ternary_expression: ($) =>
      prec.right(
        PREC.TERNARY,
        seq($._or_expression, "?", $.expression, ":", $.expression),
      ),

    _or_expression: ($) => choice($.or_expression, $._and_expression),

    or_expression: ($) =>
      prec.left(PREC.OR, seq($._or_expression, "||", $._and_expression)),

    _and_expression: ($) =>
      choice($.and_expression, $._equality_expression),

    and_expression: ($) =>
      prec.left(
        PREC.AND,
        seq($._and_expression, "&&", $._equality_expression),
      ),

    _equality_expression: ($) =>
      choice($.equality_expression, $._comparison_expression),

    _comparison_expression: ($) =>
      choice($.comparison_expression, $._additive_expression),

    comparison_expression: ($) =>
      prec.left(
        PREC.COMPARISON,
        seq(
          $._comparison_expression,
          choice("<", ">", "<=", ">=", "=~"),
          $._additive_expression,
        ),
      ),

    _additive_expression: ($) =>
      choice($.additive_expression, $._multiplicative_expression),

    additive_expression: ($) =>
      prec.left(
        PREC.ADDITIVE,
        seq(
          $._additive_expression,
          choice("+", "-"),
          $._multiplicative_expression,
        ),
      ),

    _multiplicative_expression: ($) =>
      choice($.multiplicative_expression, $._unary_expression),

    multiplicative_expression: ($) =>
      prec.left(
        PREC.MULTIPLICATIVE,
        seq(
          $._multiplicative_expression,
          choice("*", "/", "%"),
          $._unary_expression,
        ),
      ),

    _unary_expression: ($) =>
      choice($.unary_expression, $._postfix_expression),

    unary_expression: ($) =>
      prec(PREC.UNARY, seq(choice("!", "-"), $._unary_expression)),

    _postfix_expression: ($) =>
      choice(
        $.member_expression,
        $.index_expression,
        $.call_expression,
        $._primary_expression,
      ),

    member_expression: ($) =>
      prec.left(PREC.POSTFIX, seq($._postfix_expression, ".", $.identifier)),

    index_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq($._postfix_expression, "[", $.expression, "]"),
      ),

    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq($._postfix_expression, "(", optional($.argument_list), ")"),
      ),

    import_table_expression: ($) =>
      seq(
        "import_table",
        "(",
        $.string_literal,
        repeat(seq(",", $.import_table_arg)),
        ")",
      ),

    import_raw_expression: ($) =>
      seq("import_raw", "(", $.string_literal, ")"),

    // Ref expression — accepts bare identifiers or string paths for qualified/relative refs
    ref_expression: ($) =>
      seq("ref", "(", choice($.identifier_literal, field("ident", $.identifier), $.string_literal), ")"),

    // Ref shorthand — `#name` is equivalent to `ref(name)`. Bare identifier only;
    // for qualified or relative paths use the long `ref("...")` form.
    integer_literal: ($) =>
      token(
        choice(
          /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
          /0[oO][0-7][0-7_]*/,
          /0[bB][01][01_]*/,
          /[0-9][0-9_]*/,
        ),
      ),

    float_literal: ($) =>
      token(/[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9]+)?/),

    date_literal: ($) => token(seq("d", token.immediate(/"[^"]*"/))),

    duration_literal: ($) => token(seq("dur", token.immediate(/"[^"]*"/))),

    string_literal: ($) =>
      seq('"', repeat(choice($.interpolation, $.escape_sequence, $.string_content)), '"'),

    string_content: ($) => token.immediate(prec(-1, /[^"\\$]+|\$[^{]/)),

    interpolation: ($) =>
      seq(token.immediate("${"), $.expression, "}"),

    heredoc_literal: ($) =>
      seq($.heredoc_start, optional($.heredoc_body), $.heredoc_end),

    symbol_literal: ($) => token(seq(":", /[a-zA-Z_][a-zA-Z0-9_]*/)),

    // Symbol sets
    symbol_set_declaration: ($) =>
      seq(
        optional("partial"),
        "symbol_set",
        field("name", $.identifier),
        "{",
        repeat($.symbol_set_member),
        "}",
      ),

    symbol_set_member: ($) =>
      seq($.symbol_literal, optional(seq("=", $.string_literal))),

    boolean_literal: ($) => choice("true", "false"),

    null_literal: ($) => "null",

    identifier_literal: ($) => /[a-zA-Z_][a-zA-Z0-9_]*-[a-zA-Z0-9_-]*/,

    // Collections
    list_literal: ($) =>
      seq("[", optional(commaSep1($.expression)), optional(","), "]"),

    map_literal: ($) => seq("{", optional(repeat1($.map_entry)), "}"),

    map_entry: ($) =>
      seq(
        choice($.identifier, $.string_literal),
        choice("=", ":"),
        $.expression,
        optional(","),
      ),

    // Lambda
    lambda_expression: ($) =>
      prec.right(
        seq($.lambda_parameters, "=>", choice($.block_expression, $.expression)),
      ),

    block_expression: ($) =>
      seq("{", repeat($.let_binding), $.expression, "}"),

    lambda_parameters: ($) =>
      choice($.identifier, seq("(", optional(commaSep1($.identifier)), ")")),

    // Grouping
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Comments
