extras/tree-sitter-wcl/test/corpus/blocks.txt
================
Simple block
================

server {
  port = 8080
}

---

(document
  (block (identifier) (block_body
    (attribute (identifier) (expression (integer_literal))))))

================
Block with ID
================

server web-prod {
  port = 80
}

---

(document
  (block (identifier) (identifier_literal) (block_body
    (attribute (identifier) (expression (integer_literal))))))

================
Block with inline args
================

server "us-east" {
  port = 80
}

---

(document
  (block (identifier) (inline_arg (string_literal (string_content))) (block_body
    (attribute (identifier) (expression (integer_literal))))))

================
Nested blocks
================

server {
  logging {
    level = "info"
  }
}

---

(document
  (block (identifier) (block_body
    (block (identifier) (block_body
      (attribute (identifier) (expression (string_literal (string_content)))))))))

================
Block with decorator
================

@deprecated("use new")
server old-svc {
  port = 80
}

---

(document
  (block
    (decorator (identifier) (decorator_arguments (expression (string_literal (string_content)))))
    (identifier)
    (identifier_literal)
    (block_body
      (attribute (identifier) (expression (integer_literal))))))

================
Braceless block with text content
================

h1 "Hello World"

---

(document
  (block (identifier) (string_literal (string_content))))

================
Braceless block with id and text content
================

h1 myh1 "Hello"

---

(document
  (block
    (identifier)
    (identifier)
    (string_literal (string_content))))

================
Braceless bookmark block
================

section intro

---

(document
  (block (identifier) (identifier)))

================
Braceless blocks followed by braced sibling
================

h1 "Title"
h2 "Subtitle"
p "text"
server main {
  port = 80
}

---

(document
  (block (identifier) (string_literal (string_content)))
  (block (identifier) (string_literal (string_content)))
  (block (identifier) (string_literal (string_content)))
  (block
    (identifier)
    (inline_arg (identifier))
    (block_body
      (attribute (identifier) (expression (integer_literal))))))
